--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -105,13 +105,13 @@
 }
 
 @misc{camel2012,
-	title = "Apache Camel official website",
+	title = "oficjalna strona Apache Camel",
 	howpublished = "\url{http://camel.apache.org}",
 	year = 2012
 }
 
 @misc{jaxb2008, 
-	title = "JAXB homepage",
+	title = "strona domowa JAXB",
 	howpublished = "\url{http://jaxb.java.net}",
 	year = 2008
 }
@@ -124,28 +124,46 @@
 }
 
 @misc{eaipatterns, 
-	title = "EIP Patterns homepage",
+	title = "strona domowa EIP Patterns",
 	howpublished = "\url{http://www.eaipatterns.com/toc.html}",
 	year = 2003
 }
 
 
 @misc{fusehomepage2012, 
-	title = "Fuse ESB homepage",
+	title = "strona domowa Fuse ESB",
 	howpublished = "\url{http://fusesource.com/docs/esb/}",
 	year = 2012
 }
 
 @misc{ivonasite,
-	title = "Ivona TTS homepage",
+	title = "strona domowa Ivona TTS",
 	howpublished = "\url{http://developer.ivona.com/overview}",
 	year = 2012
 }
 
 @misc{freettssite,
-	title = "Free TTS homepage",
+	title = "strona domowa Free TTS",
 	howpublished = "\url{http://freetts.sourceforge.net/docs/index.php}",
 	year = 2012
+}
+
+@misc{googlegoggles,
+	title = "strona domowa Google Goggles",
+	howpublished = "\url{http://www.google.com/mobile/goggles/}",
+	year = 2011
+}
+
+@misc{oddcasts,
+	title = "strona domowa Oddcast Illustrated characters",
+	howpublished = "\url{http://oddcast.com/technologies/illustrated/}",
+	year = 2012
+}
+
+@misc{pediaphon,
+	title = "strona domowa projektu Pediaphon",
+	howpublished = "\url{http://www.pediaphon.org}",
+	year = 2011
 }
 
 @article{name06,
