--- a/thesis.tex
+++ b/thesis.tex
@@ -157,7 +157,7 @@ Kraków, 2012
 \mainmatter
 
 \renewcommand{\chaptername}{Rozdział} % uncomment to print only "1" not "Chapter 1"
-
+	
 
 %: ----------------------- subdocuments ------------------------
 
@@ -169,10 +169,11 @@ Kraków, 2012
 
 					% aims of the project
 \include{6/projekt_i_implementacja}
+\include{5/current_solutions}
 \include{3/technologie}	
 \include{4/wymagania}						
 	
-%\include{5/projects_implementations}
+
 
 
 \include{7/discussion}               % discussion of results
